...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText"
        android:id="@+id/textView" />

    <info.hoang8f.widget.FButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/login"
        android:textColor="#FFF"
...
