<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.waterSystem.RegistrationScreen">

    <TextView
        android:text="Sign in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile"
        android:textSize="36sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="HardcodedText" />

    <info.hoang8f.widget.FButton
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelProfile"
        android:textColor="#FFF"
        android:fontFamily="sans-serif-light"
        fbutton:buttonColor="#039BE5"
        fbutton:shadowColor="#0277bd"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        fbutton:cornerRadius="10dp"
        android:layout_marginStart="20dp"
        android:layout_alignBaseline="@+id/save"
        android:layout_alignBottom="@+id/save"
        android:layout_toEndOf="@+id/classification"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/name"
        android:textSize="18sp"
        android:layout_below="@+id/profile"
        android:layout_alignEnd="@+id/email"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Name"
        android:ems="10"
        android:id="@+id/nameInput"
        android:layout_alignBaseline="@+id/name"
        android:layout_alignBottom="@+id/name"
        android:layout_toEndOf="@+id/profile"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="User ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UserID"
        android:layout_marginTop="14dp"
        android:textSize="18sp"
        android:layout_below="@+id/nameInput"
        android:layout_alignParentStart="true"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="UserID"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_alignBaseline="@+id/UserID"
        android:layout_alignBottom="@+id/UserID"
        android:layout_alignStart="@+id/nameInput"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="Email "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:textSize="18sp"
        android:layout_below="@+id/editText2"
        android:layout_alignStart="@+id/UserID"
        android:layout_marginTop="15dp"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailInput"
        android:hint="Email"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:layout_alignStart="@+id/editText2"
        tools:ignore="HardcodedText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordInput"
        android:hint="Password"
        android:layout_below="@+id/emailInput"
        android:layout_alignStart="@+id/emailInput"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:layout_alignStart="@+id/UserID"
        android:layout_marginStart="20dp"
        android:layout_alignTop="@+id/save"
        android:id="@+id/password"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/passwordInput"
        android:layout_alignBottom="@+id/passwordInput"
        android:layout_alignParentStart="true"
        tools:ignore="HardcodedText" />

    <TextView
        android:text="Account Type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/classification"
        android:textSize="18sp"
        android:layout_marginStart="0dp"
        android:layout_below="@+id/passwordInput"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        tools:ignore="HardcodedText" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/classificationSpinner"
        android:layout_below="@+id/classification"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="32dp" />

    <info.hoang8f.widget.FButton
        android:text="Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:layout_marginTop="53dp"
        android:textColor="#FFF"
        android:fontFamily="sans-serif-light"
        fbutton:buttonColor="#039BE5"
        fbutton:shadowColor="#0277bd"
        fbutton:shadowEnabled="true"
        fbutton:shadowHeight="5dp"
        fbutton:cornerRadius="10dp"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/classificationSpinner"
        android:layout_alignStart="@+id/password"
        tools:ignore="HardcodedText" />

</RelativeLayout>
